# Satan

./: .gitignore  CMakeLists.txt  README.md  language_spec.md  lexer.cpp  lexer.h  main.cpp
.github/workflows/: c-cpp.yml
Examples/: Automl.satan  Natural_network.satan  Word_cloud.satan  clustering.satan  data_exploration.satan  datapreprocessing.satan  decision_tree.satan  demo.satan  dict_json.satan  feature_importance.satan  for_in.satan  full_pipeline.satan  hyperparameter.satan  input_demo.py  linear_regression.py  logistic_regression.satan  math_utils.satan  model_save_load.satan  oop_test.satan  random_forest.satan  sentiment_analysis.satan  stdlib_demo.satan  test_params.satan  tets_suite.satan  try_catch.satan  word_cloud.satan  xgboost.satan
Satan/: README.md  language_spec.md  main.cpp
Satan/include/: lexer.h
Satan/src/: environment.cpp  lexer.cpp  parser.cpp
Satan/tests/: test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
include/: environment.h  interpreter.h  lexer.h  parser.h  python_bridge.py  repl.h  satan_value.h  setup.h  stdlib.h
src/: environment.cpp  interpreter.cpp  lexer.cpp  parser.cpp  python_bridge.cpp  repl.cpp  setup.cpp  stdlib_ml.cpp
tests/: test_environment.cpp  test_if.satan  test_interpreter.cpp  test_lexer.cpp  test_parser.cpp
